# cozy-backend

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
core/: permissions.py  urls.py
destinations/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
destinations/migrations/: 0001_initial.py
users/: models.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_sex.py
